# svg2img

./: .gitignore  LICENSE.txt  README.md
example/: CMakeLists.txt  Makefile  main.cpp
include/: svg2img.h
